# AlphaPilot

./: .dockerignore  .env.docker.example  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.live  LICENSE  README.md  README_cn.md  clean_log_dirs.py  docker-compose.yml  import_factors_from_log.py  prepare_cn_data.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  bug_report.yml  config.yml  documentation.yml  feature_request.yml  question_support.yml
alphaagent/app/: cli.py
alphaagent/app/backtest_viewer/: app.py  loader.py
alphaagent/app/data/: adjust_prices.py  generate_h5.py  prepare_cn.py  prepare_data.py  qlib_convert.py  stock_list.py
alphaagent/core/: experiment.py
alphaagent/oai/: llm_utils.py
alphapilot/: __init__.py  _numpy_compat.py
alphapilot/adapters/: README.md  __init__.py  registry.py
alphapilot/adapters/base/: __init__.py  backtest.py  data_source.py  llm.py
alphapilot/adapters/builtin/: __init__.py  baostock_data_source.py  openai_llm.py  qlib_backtest.py
alphapilot/app/: cli.py
alphapilot/app/CI/: run.py
alphapilot/app/backtest_viewer/: app.py  loader.py
alphapilot/app/portal/: __init__.py  app.py  i18n.py
alphapilot/components/benchmark/: conf.py  eval_method.py
alphapilot/components/document_reader/: document_reader.py
alphapilot/components/knowledge_management/: graph.py  vector_base.py
alphapilot/components/loader/: experiment_loader.py  task_loader.py
alphapilot/components/proposal/: __init__.py
alphapilot/components/runner/: __init__.py
alphapilot/components/workflow/: conf.py  rd_loop.py
alphapilot/core/: developer.py  evaluation.py  evolving_agent.py  evolving_framework.py  experiment.py  knowledge_base.py  path_safety.py  pickle_cache.py  prompts.py  proposal.py  scenario.py  utils.py  workspace.py
alphapilot/kernel/: __init__.py  base.py  config.py  context.py  engine.py  paths.py  registry.py
alphapilot/log/: __init__.py  cleanup.py  logger.py  mine_paths.py  storage.py  tag_utils.py  time.py
alphapilot/log/ui/: app.py  i18n.py  panel.py  session.py  views.py  web.py
alphapilot/modules/: __init__.py
alphapilot/modules/alpha_mining/: __init__.py  conf.py  module.py  registry.py
alphapilot/modules/alphaforge/: README.md  __init__.py  data_adapter.py  device.py  pipeline.py  translate.py
alphapilot/modules/alphaforge_aff/: __init__.py  miner.py  module.py
alphapilot/modules/alphaforge_search/: __init__.py  module.py
alphapilot/modules/backtest_viz/: __init__.py  app.py  charts.py  leaderboard.py  module.py  panel.py
alphapilot/modules/daily_trade/: __init__.py  module.py
alphapilot/modules/data_viz/: __init__.py  app.py  charts.py  loader.py  module.py  panel.py
alphapilot/modules/factor/: __init__.py  module.py
alphapilot/modules/live/: __init__.py  module.py
alphapilot/modules/platform/: __init__.py  module.py
alphapilot/modules/portal/: __init__.py  api.py  app.py  env_config.py  i18n.py  jobs.py  module.py  runtime.py  schedules.py  settings.py
alphapilot/modules/qlib_yaml/: __init__.py  module.py
alphapilot/modules/stock_pool/: __init__.py  module.py
alphapilot/modules/strategy_backtest/: __init__.py  module.py
alphapilot/modules/timing/: __init__.py  module.py
alphapilot/oai/: llm_conf.py  llm_utils.py
alphapilot/quant/: __init__.py  indicators.py  signals.py
alphapilot/systems/: __init__.py  run_workspace.py
alphapilot/systems/backtest/: __init__.py  artifacts.py  base.py  clean_log_dirs.py  portfolio_artifacts.py  protocols.py  qlib_config.py  qlib_pretrained.py  results.py  scoring_model_export.py  service.py  types.py  workspace.py
alphapilot/systems/data/: __init__.py  adjust_prices.py  base.py  data_paths.py  download_state.py  factor_h5.py  frequency.py  generate_h5.py  manage.py  pipeline.py  prepare_cn.py  prepare_cn_minute.py  prepare_data.py  prepare_tushare.py  qlib_convert.py  service.py  stock_list.py  stock_pool.py  storage.py  types.py
alphapilot/systems/factor/: __init__.py  base.py  database.py  expression.py  service.py  types.py
alphapilot/systems/live/: __init__.py  algos.py  clock.py  config.py  engine.py  executor.py  gateway.py  ledger.py  oms.py  position.py  risk.py  service.py  (+2 more)
alphapilot/utils/: env.py  workflow.py
backup_data/: alphaagent_architecture.puml  alphapilot_architecture.puml
constraints/: 3.11.txt
docs/: DOCKER-RUN.md  DOCKER.md  alphaagent-structure.md  alphapilot-backtest.md  alphapilot-cli.md  alphapilot-structure.md  backtest-decoupling.md  factor-h5-lifecycle-design.md  hikyuu-guide.md  mine-vs-backtest-artifacts.md  qa.md
important_data/: README.md
important_data/factor_qlib_templates/: README.md  back_test.yaml  conf.yaml  conf_cn_combined_kdd_ver.yaml
important_data/stock_lists/: kechuang_stock.csv  main_stock_2026_4_27.csv  test_stock_pool_30.csv  test_stock_pool_80.csv
scripts/: find_missing_factor.py  live_smoke_connect_xtp.py  live_smoke_import.py
tests/: benchmark_factor_probe_download.py  conftest.py  test_alphaforge_translate.py  test_cli_real_commands.py  test_daily_trade_lots_offline.py  test_data_pipeline_real.py  test_data_viz_minute.py  test_download_state.py  test_factor_categories.py  test_factor_h5.py  test_factor_system_offline.py  test_frequency.py  test_kernel_registry.py  test_live_algos.py  test_live_engine.py  test_live_executor.py  test_live_fsm.py  test_live_oms.py  test_live_registry.py  test_live_risk.py  test_live_system.py  test_live_types.py  test_live_vnpy_adapter.py  test_log_cleanup.py  test_log_ui_scenario_decoupling.py  test_mining_backtest_real.py  test_mining_llm.py  test_mining_loop_steps.py  test_minute_download_offline.py  test_minute_pipeline_real.py  test_notify_dispatch_offline.py  test_notify_inbound_features.py  test_notify_realsend.py  test_portal_api.py  test_portal_e2e.py  test_portal_jobs.py  test_portal_live.py  test_qlib_yaml_freq.py  test_remove_backtest_adapter.py  test_run_workspace.py  (+12 more)
vnpy_emt/: setup.cfg  setup.py
vnpy_xtp/: meson.build  pyproject.toml
(+199 files in other folders)
