[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools",
  "setuptools-scm",
]

[project]
authors = [
  {email = "wangrlink@qq.com", name = "Rui Wang"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
description = "AlphaPilot: LLM-driven alpha factor mining agent"
dynamic = [
  "dependencies",
  "optional-dependencies",
  "version",
]
keywords = [
  "Autonomous Agents",
  "Large Language Models",
  "Research and Development",
]
name = "alphapilot"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
alphapilot = "alphapilot.app.cli:app"

# Built-in systems/modules. Third-party packages can register additional
# entries under these groups to be auto-discovered by the kernel's
# MainEngine.discover_plugins() (vnpy-style plug-and-play extensions).
[project.entry-points."alphapilot.systems"]
data = "alphapilot.systems.data.service:QlibDataSystem"
factor = "alphapilot.systems.factor.service:FactorSystem"
strategy = "alphapilot.systems.strategy.service:StrategySystem"
backtest = "alphapilot.systems.backtest.service:QlibBacktestSystem"

[project.entry-points."alphapilot.modules"]
alpha_mining = "alphapilot.modules.alpha_mining.module:AlphaMiningModule"
platform = "alphapilot.modules.platform.module:PlatformModule"
data_viz = "alphapilot.modules.data_viz.module:DataVizModule"

[project.urls]
homepage = "https://github.com/ai-yang/money_is_all_you_need"
issue = "https://github.com/ai-yang/money_is_all_you_need/issues"

[tool.setuptools]
packages = ["alphapilot"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
docs = {file = ["requirements/docs.txt"]}
lint = {file = ["requirements/lint.txt"]}
package = {file = ["requirements/package.txt"]}
test = {file = ["requirements/test.txt"]}

[tool.setuptools_scm]
local_scheme = "no-local-version"
version_scheme = "guess-next-dev"
