[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools",
  "setuptools-scm",
]

[project]
authors = [
  {email = "wangrlink@qq.com", name = "Rui Wang"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
description = "AlphaPilot: LLM-driven alpha factor mining agent"
dynamic = [
  "dependencies",
  "version",
]
keywords = [
  "Autonomous Agents",
  "Large Language Models",
  "Research and Development",
]
name = "alphapilot"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
alphapilot = "alphapilot.app.cli:app"

# Built-in systems/modules. Third-party packages can register additional
# entries under these groups to be auto-discovered by the kernel's
# MainEngine.discover_plugins() (vnpy-style plug-and-play extensions).
[project.entry-points."alphapilot.systems"]
data = "alphapilot.systems.data.service:QlibDataSystem"
factor = "alphapilot.systems.factor.service:FactorSystem"
strategy = "alphapilot.systems.strategy.service:StrategySystem"
backtest = "alphapilot.systems.backtest.service:QlibBacktestSystem"
notify = "alphapilot.systems.notify.service:NotificationSystem"

[project.entry-points."alphapilot.modules"]
alpha_mining = "alphapilot.modules.alpha_mining.module:AlphaMiningModule"
platform = "alphapilot.modules.platform.module:PlatformModule"
portal = "alphapilot.modules.portal.module:PortalModule"
data_viz = "alphapilot.modules.data_viz.module:DataVizModule"
backtest_viz = "alphapilot.modules.backtest_viz.module:BacktestVizModule"
strategy_backtest = "alphapilot.modules.strategy_backtest.module:StrategyBacktestModule"
daily_trade = "alphapilot.modules.daily_trade.module:DailyTradeModule"
qlib_yaml = "alphapilot.modules.qlib_yaml.module:QlibYamlModule"
factor_cli = "alphapilot.modules.factor.module:FactorModule"
alphaforge_aff = "alphapilot.modules.alphaforge_aff.module:AlphaForgeAFFModule"
alphaforge_search = "alphapilot.modules.alphaforge_search.module:AlphaForgeSearchModule"
stock_pool = "alphapilot.modules.stock_pool.module:StockPoolModule"

# Optional deps for the AlphaForge-derived mining modules: ``alphaforge``
# covers AFF (GAN) + GP + RL.
[project.optional-dependencies]
alphaforge = [
  "torch",
  "gym",
  "stable-baselines3",
  "sb3-contrib",
  "shimmy",
]

[project.urls]
homepage = "https://github.com/ai-yang/money_is_all_you_need"
issue = "https://github.com/ai-yang/money_is_all_you_need/issues"

[tool.setuptools]
packages = ["alphapilot"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools_scm]
local_scheme = "no-local-version"
version_scheme = "guess-next-dev"

[tool.pytest.ini_options]
testpaths = ["tests"]
# Default run = fast, offline tier only. Opt into the heavier/external tiers with
# an explicit ``-m`` (which overrides this), e.g. ``pytest -m real_llm``.
addopts = "-m 'not real_cli and not real_data and not slow and not real_llm and not real_notify'"
norecursedirs = [
  ".git",
  ".pytest_cache",
  "__pycache__",
  "alphapilot/modules/alphaforge/vendor",
  "alphapilot/modules/portal/web/node_modules",
  "alphapilot/modules/portal/web/dist",
  "docker-data",
  "git_ignore_folder",
  "log",
  "pickle_cache",
]
markers = [
  "real_cli: runs real AlphaPilot CLI smoke tests with network and subprocesses",
  "real_data: needs network + TUSHARE_TOKEN to download real market data",
  "slow: heavy local computation (factor mining gp/aff/rl, qlib backtest)",
  "real_llm: needs OPENAI_API_KEY and consumes LLM API quota",
  "real_notify: sends real messages to external channels (telegram/feishu/email)",
]
